chore:Update Maven from 3.8.8 to 3.9.11
Signed-off-by: Ronny Trommer <ronny@no42.org>